--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,5 +1,60 @@
 .promo {
     min-height: 650px;
     padding: 21px 0 93px 0;
-    background: url(../../img/main/main_bg.jpg) center (center/cover) no-repeat;
+    background: url(../img/main/main_bg.jpg) center (center/cover) no-repeat;
+    &__wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        margin-top: 90px;
+    }
+    &__header {
+        color: #ffffff;
+        font-size: 42px;
+        font-weight: 700;
+        text-align: right;
+        text-transform: uppercase;
+        line-height: 42px;
+    }
+    &__subheader {
+        color: #ffffff;
+        font-size: 24px;
+        font-weight: 500;
+        text-align: right;
+        text-transform: uppercase;
+        line-height: 42px;
+        margin-top: 17px;
+    }
+    &__icons {
+        display: flex;
+        justify-content: space-between;
+        width: 425px;
+        margin-top: 65px;
+    }
+    &__icon {
+        width: 108px;
+        text-align: center;
+        color: #ffffff;
+        font-size: 14px;
+        font-weight: 500;
+        img {
+            display: block;
+            margin: 0 auto;
+            margin-bottom: 20px;
+            min-height: 46px;
+        }
+    }
+    &__link {
+        margin-top: 18px;
+        color: #ffffff;
+        font-size: 16px;
+        font-weight: 500;
+        text-align: right;
+        a {
+            text-decoration: underline;
+            text-transform: uppercase;
+            color: #ffffff;
+        }
+    }
 }
+
