--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,9 +4,11 @@
     font-family: 'Museo Sans Cyrl', sans-serif;
 }
 .container {
+    position: relative;
     max-width: 950px;
     margin: 0 auto;
 }
+
 @import 'blocks/promo';
 @import 'blocks/header';
 @import 'blocks/buttons';
@@ -14,4 +16,5 @@
 @import 'blocks/consultation';
 @import 'blocks/titles';
 @import 'blocks/forms';
+@import 'blocks/carousel';
 @import 'media';
