--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -11,7 +11,7 @@
 
 @media (max-width: 767px){
     .container {
-       width: 100%;
+        width: 100%;
     }
     .header {
         justify-content: space-around;
@@ -79,6 +79,17 @@
         }
         &__descr {
             margin-top: 26px;
+        }
+    }
+    .catalog {
+        &__content {
+            width: 95%;
+            justify-content: space-around;
+        }
+    }
+    .feedback {
+        &__content{
+            padding-left: 50px;
         }
     }
 } 
@@ -156,4 +167,14 @@
             margin-top: 25px;
         }
     }
+    .catalog {
+        &__tab {
+            width: 160px;
+            font-size: 16px;
+        }
+        &__content {
+            justify-content: center;
+        }
+    }
+    
 }
