--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,4 +18,5 @@
 @import 'blocks/forms';
 @import 'blocks/carousel';
 @import 'blocks/catalog';
-@import 'media';
+@import 'blocks/feedback';
+@import 'media.scss';
