--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -92,6 +92,25 @@
             padding-left: 50px;
         }
     }
+    .footer {
+        width: 100%;
+        height: 500px;
+        &__info {
+            width: 400px;
+            height: 200px;
+            padding: 30px 35px 20px 35px;
+        }
+        &__addr {
+            margin-bottom: 25px;
+        }
+        &__phone {
+            margin-bottom: 25px;
+        }
+        iframe {
+            height: 500px;
+        }
+
+    }
 } 
 
 @media (max-width: 575px) {
@@ -175,6 +194,22 @@
         &__content {
             justify-content: center;
         }
+    }
+    .footer {
+        &__info {
+            width: 350px;
+            height: 180px;
+            padding: 25px 20px 15px 20px;
+        }
+        &__addr {
+            font-size: 18px;
+            margin-bottom: 20px;
+        }
+        &__phone {
+            font-size: 18px;
+            margin-bottom: 20px;
+        }
+
     }
     
 }
