--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -7,9 +7,52 @@
             padding-right: 62px;
         }
     }
+    .carousel {
+        .prev {
+            left: -24px;
+        }
+        .next {
+            right: -10px;
+            left: auto;
+        }
+    }
 }
 
 @media (max-width: 767px){
+    .carousel {
+        .next, .prev {
+            display: none;
+        }
+        .tns-outer {
+            position: relative;
+            .tns-nav{
+                display: flex;
+                justify-content: space-around;
+                position: absolute;
+                top: 103%;
+                left: 50%;
+                transform: translateX(-50%);
+                width: 150px;
+                height: 15px;
+                margin: 0 auto;
+                &-active  {
+                    background-color: $main-color;
+                }
+                button {
+                    width: 15px;
+                    height: 15px;
+                    padding: 0;
+                    border-radius: 100%;
+                    border-color: $main-color;
+
+                }
+            }
+        }
+        img {
+            width: 85%;
+        }
+    }
+
     .container {
         width: 100%;
     }
@@ -82,6 +125,9 @@
         }
     }
     .catalog {
+        .container {
+            width: 90%;
+        }
         &__content {
             width: 95%;
             justify-content: space-around;
@@ -203,6 +249,11 @@
             align-items: center;
             max-width: 575px;
             margin-top: 25px;
+        }
+    }
+    .carousel{
+        img {
+            width: 90%;
         }
     }
     .catalog {
