--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -128,13 +128,15 @@
             margin-left: 20px;
             transform: translateX(0%);
             padding-right: 20px;
-            transition: 0.5s all;
-            padding-left: 19px;
-            margin-bottom: 0;
-            list-style-type: none;
+            transition: 0.5s all;            
             &_active {
                 transform: translateX(-100%);
                 margin-left: 0px;
+            }
+            ul {
+                padding-left: 19px;
+                margin-bottom: 0;
+                list-style-type: none;
             }
             li {
                 position: relative;
